--- a/ComposeChampions2k22Submission/app/build.gradle
+++ b/ComposeChampions2k22Submission/app/build.gradle
@@ -106,5 +106,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     testImplementation "org.mockito:mockito-core:4.4.0"
     testImplementation "org.mockito:mockito-inline:4.4.0"
-
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
 }
